fixed grammar error and attempting to fix extra space on top

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body /* Added font, width, height, margin, padding, and overflow. -Edited 5/14 b
   opacity: 0.75;
   left:900px;*/
   font-family: 'Roboto', sans-serif; /*Adjust font family, size, and placement of the counter -Edited 5/14 by Stephanie*/
-  font-size: 18px;
+  font-size: 20px;
   text-align: center;
   top: 0px;
   right: 0px;
@@ -198,7 +198,7 @@ div.transbox p { /*To change font family and size of text inside the transparent
   top: 0px;
   left:315px;
   height: 100%;
-  width: 90%;
+  width: 99%;
   object-fit: contain;
 }
 
